<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewDos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ViewTres">


        <EditText
            android:id="@+id/idtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_movie_24"
            android:drawableLeft="@drawable/ic_baseline_movie_24"
            android:drawablePadding="20dp"
            android:hint="@string/txttitulo"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="213dp" />

        <EditText
            android:id="@+id/idpais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            android:drawableLeft="@drawable/ic_baseline_location_on_24"
            android:drawablePadding="20dp"
            android:hint="@string/txtpais"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="213dp" />

        <EditText
            android:id="@+id/idcalificacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_star_border_24"
            android:drawableLeft="@drawable/ic_baseline_star_border_24"
            android:drawablePadding="20dp"
            android:hint="@string/txtcalificacion"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="213dp" />

        <EditText
            android:id="@+id/idimagenurl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_http_24"
            android:drawableLeft="@drawable/ic_baseline_http_24"
            android:drawablePadding="20dp"
            android:hint="@string/txtimagenurl"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="213dp" />

        <EditText
            android:id="@+id/idurl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_http_24"
            android:drawableLeft="@drawable/ic_baseline_http_24"
            android:drawablePadding="20dp"
            android:hint="@string/txturl"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="213dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color1"
        android:gravity="center"
        android:text="@string/txtvistaprincipal"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/contenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"></LinearLayout>

</LinearLayout>
