<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewCuatro">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color2"
        android:gravity="center"
        android:text="@string/visualizar_editar_eliminar"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/idmovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableStart="@drawable/ic_baseline_movie_24"
        android:drawableLeft="@drawable/ic_baseline_movie_24"
        android:drawablePadding="20dp"
        android:hint="ID"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="213dp" />

    <EditText
        android:id="@+id/idtitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableStart="@drawable/ic_baseline_movie_24"
        android:drawableLeft="@drawable/ic_baseline_movie_24"
        android:drawablePadding="20dp"
        android:hint="@string/txttitulo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="213dp" />

    <EditText
        android:id="@+id/idpais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="20dp"
        android:hint="@string/txtpais"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="213dp" />

    <EditText
        android:id="@+id/idcalificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableStart="@drawable/ic_baseline_star_border_24"
        android:drawableLeft="@drawable/ic_baseline_star_border_24"
        android:drawablePadding="20dp"
        android:hint="@string/txtcalificacion"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="213dp" />

    <EditText
        android:id="@+id/idimagenurl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableStart="@drawable/ic_baseline_http_24"
        android:drawableLeft="@drawable/ic_baseline_http_24"
        android:drawablePadding="20dp"
        android:hint="@string/txtimagenurl"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="213dp" />

    <EditText
        android:id="@+id/idurl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableStart="@drawable/ic_baseline_http_24"
        android:drawableLeft="@drawable/ic_baseline_http_24"
        android:drawablePadding="20dp"
        android:hint="@string/txturl"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="213dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50px"
        app:layout_constraintVertical_weight="1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btneditpelicula"
        android:layout_width="600px"
        android:layout_height="100px"
        android:layout_gravity="right"
        android:layout_margin="15dp"
        android:background="@color/color1"
        android:text="@string/editar_pelicula"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="368dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="200px" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btndeletepelicula"
            android:layout_width="500px"
            android:layout_height="100px"
            android:layout_gravity="right"
            android:layout_margin="15dp"
            android:background="@color/red"
            android:text="Eliminar por id"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="368dp" />

        <EditText
            android:id="@+id/iddeletepelicula"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </TableRow>


</LinearLayout>

